<resources>

    <string name="app_name">Calorie counter</string>

    <string name="action_settings">Settings</string>

    <string name="settings_calories_per_day">Calories per day</string>
    <string name="main_fab_ccal50">50</string>
    <string name="main_fab_ccal100">100</string>
    <string name="main_fab_ccal250">250</string>
    <string name="main_fab_ccal500">500</string>
    <string name="main_fab_custom_call">Custom</string>
    <string name="main_menu_select_day">Select day</string>
    <string name="main_menu_edit">Edit..</string>
    <string name="main_menu_about">About</string>
    <string name="editor_label_ccals">Calories</string>
    <string name="editor_label_date">Date</string>
    <string name="edit_single_main_label">Edit data</string>
    <string name="edit_single_delete_inp">Delete</string>


    <string name="my_dialog_agree">Yes, delete</string>

    <string name="my_dialog_title">Delete record?</string>
    <string name="my_dialog_disagree">Cancel</string>


</resources>
