<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ccal_count_helper.MainActivity">
    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/manu_action_edit"
        android:orderInCategory="2"
        android:title="@string/main_menu_edit" />
    <item
        android:id="@+id/menu_action_select_day"
        android:orderInCategory="3"
        android:title="@string/main_menu_select_day" />
    <item
        android:id="@+id/menu_action_about"
        android:orderInCategory="5"
        android:title="@string/main_menu_about" />
</menu>
