<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/holo_blue_light"
        app:srcCompat="@drawable/ic_create_black_24dp" />

    <FrameLayout
        android:id="@+id/fabFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/layoutFabCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="360dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:text="@string/main_fab_custom_call"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:backgroundTint="@android:color/holo_purple"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFab500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="300dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvt500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:text="@string/main_fab_ccal500"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:backgroundTint="@android:color/holo_red_light"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFab250"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="240dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvt250"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:text="@string/main_fab_ccal250"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:backgroundTint="@android:color/holo_orange_dark"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFab100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="180dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvt100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:text="@string/main_fab_ccal100"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:backgroundTint="@android:color/holo_orange_light"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFab50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="120dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvt50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:text="@string/main_fab_ccal50"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:backgroundTint="@android:color/holo_green_light"
                app:fabSize="mini" />

        </LinearLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>